--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            text-align: center;
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #fff;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        h1 {
+            color: #ff6f61;
+        }
+        p {
+            color: #333;
+            font-size: 18px;
+            line-height: 1.6;
+        }
+        .heart {
+            color: #ff6f61;
+            font-size: 48px;
+        }
+    </style>
 </head>
-<body style="background-image: url('channels4_profile.jpg'); background-size: cover;">
+<body>
     <p id="output"></p>
 
     <script>
@@ -61,25 +92,10 @@
                 });
         }
     </script>
-    
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
-            background-position: center;
-        }
-        
-        #output {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            color: white;
-            text-align: center;
-        }
-    </style>
+    <div class="container">
+        <h1>Welcome!</h1>
+        <p>This is a simple but cute design template.</p>
+        <span class="heart">&hearts;</span>
+    </div>
 </body>
 </html>
